force-app/main/default/objects/Lease__c/fields/Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid__c</fullName>
    <description>The total amount paid on all charges</description>
    <inlineHelpText>Shows the total amount paid on all lease charges</inlineHelpText>
    <label>Amount Paid</label>
    <summarizedField>Lease_Charge__c.Amount_Paid__c</summarizedField>
    <summaryForeignKey>Lease_Charge__c.Lease__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>