force-app/main/default/objects/Lease__c/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created by AF. Looks up to the Space (Property) related to this Lease record.</description>
    <inlineHelpText>This is the Property associated with this Lease.</inlineHelpText>
    <label>Building</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Space__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Property</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Space__c</referenceTo>
    <relationshipLabel>Leases</relationshipLabel>
    <relationshipName>Leases</relationshipName>
    <type>Lookup</type>
</CustomField>