force-app/main/default/objects/Lease__c/fields/Created_From_Opp__c.field-meta.xml
<CustomField>
    <fullName>Created_From_Opp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created by JW
Denotes which Opportunity record this Lease was created from.
Populated by Flow (Opp to Lease).</description>
    <label>Created From Opp (do not display)</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Leases</relationshipLabel>
    <relationshipName>Leases</relationshipName>
    <type>Lookup</type>
</CustomField>