force-app/main/default/objects/Lease__c/fields/Insurance__c.field-meta.xml
<CustomField>
    <fullName>Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the tenant have insurance coverage</description>
    <inlineHelpText>Does the tenant have an insurance policy?</inlineHelpText>
    <label>Insurance?</label>
    <type>Checkbox</type>
</CustomField>