force-app/main/default/objects/Lease__c/fields/Lease_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Lease_Expiration_Date__c</fullName>
    <description>The expiration date of the lease agreement</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What is the expiration date of the lease agreement?</inlineHelpText>
    <label>Lease Expiration Date</label>
    <type>Date</type>
</CustomField>