force-app/main/default/objects/Lease__c/fields/Lease_Length__c.field-meta.xml
<CustomField>
    <fullName>Lease_Length__c</fullName>
    <description>The length of the lease in months</description>
    <formula>ROUND((Lease_Expiration_Date__c - Lease_Start_Date__c) * 0.032854, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total number of months in the lease agreement.</inlineHelpText>
    <label>Lease Length (mo)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>