force-app/main/default/objects/Lease__c/fields/Lease_Remaining_mo__c.field-meta.xml
<CustomField>
    <fullName>Lease_Remaining_mo__c</fullName>
    <description>Calculates the months remaining in the lease</description>
    <formula>CASE(Status__c, &quot;Active&quot;, (Lease_Expiration_Date__c - TODAY()) / (365 / 12), &quot;Scheduled&quot;,  Lease_Length__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of months left in the lease agreement.</inlineHelpText>
    <label>Lease Remaining (mo)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>