force-app/main/default/objects/Lease__c/fields/Lease_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Lease_Start_Date__c</fullName>
    <description>The starting date of the lease</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>When does the lease start?</inlineHelpText>
    <label>Lease Start Date</label>
    <type>Date</type>
</CustomField>