force-app/main/default/objects/Lease__c/fields/Lease_Type__c.field-meta.xml
<CustomField>
    <fullName>Lease_Type__c</fullName>
    <description>JW
Leasing
Field Purpose: Tracks whether this is a Commercial Tenant Lease or a Desk Hotel Lease
Population: Flow</description>
    <inlineHelpText>Is this a Office lease, Retail/Restaurant lease, Desk Hotel lease, or Parking Lease?</inlineHelpText>
    <label>Lease Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Leasing_Lease_Type</valueSetName>
    </valueSet>
</CustomField>