force-app/main/default/objects/Lease__c/fields/Member_of_My_Team__c.field-meta.xml
<CustomField>
    <fullName>Member_of_My_Team__c</fullName>
    <formula>OR(
$User.ManagerId = $User.Id,
Id = $User.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member of My Team</label>
    <type>Checkbox</type>
</CustomField>