force-app/main/default/objects/Lease__c/fields/Month_to_Month__c.field-meta.xml
<CustomField>
    <fullName>Month_to_Month__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created by JW
Denotes whether this lease is on a month-to-month basis (no expiration date).
Checked manually.</description>
    <inlineHelpText>Is this lease on a month-to-month basis?</inlineHelpText>
    <label>Month-to-Month?</label>
    <type>Checkbox</type>
</CustomField>