force-app/main/default/objects/Lease__c/fields/Next_Month__c.field-meta.xml
<CustomField>
    <fullName>Next_Month__c</fullName>
    <description>For BW - Auto Lease Charge Creation process, calculates name of next month</description>
    <formula>CASE(
      TEXT(MONTH(TODAY())), 
      &quot;1&quot;, &quot;February&quot;,
      &quot;2&quot;, &quot;March&quot;,
      &quot;3&quot;, &quot;April&quot;,
      &quot;4&quot;, &quot;May&quot;,
      &quot;5&quot;, &quot;June&quot;,
      &quot;6&quot;, &quot;July&quot;,
      &quot;7&quot;, &quot;August&quot;,
      &quot;8&quot;, &quot;September&quot;,
      &quot;9&quot;, &quot;October&quot;,
      &quot;10&quot;, &quot;November&quot;,
      &quot;11&quot;, &quot;December&quot;,
      &quot;12&quot;, &quot;January&quot;, 
      &quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Month</label>
    <type>Text</type>
</CustomField>