force-app/main/default/objects/Lease__c/fields/num_of_Parking_Spaces__c.field-meta.xml
<CustomField>
    <fullName>num_of_Parking_Spaces__c</fullName>
    <description>The number of parking spaces in each the lot the tenant is allowed to use.</description>
    <inlineHelpText>How many parking spaces is the tenant allowed to use?</inlineHelpText>
    <label># of Parking Spaces</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>