force-app/main/default/objects/Lease__c/fields/of_Signs__c.field-meta.xml
<CustomField>
    <fullName>of_Signs__c</fullName>
    <description>Created by JW
Tracks the # of signs included in this lease throw a signage addendum.
Populated by Flow.</description>
    <inlineHelpText>How many signs are included in a signage addendum on this lease?</inlineHelpText>
    <label># of Signs</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>