force-app/main/default/objects/Lease__c/fields/Outstanding_Charges__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Charges__c</fullName>
    <inlineHelpText>The Amount that is owed.</inlineHelpText>
    <label>Outstanding Charges</label>
    <summarizedField>Lease_Charge__c.Remaining_Balance__c</summarizedField>
    <summaryForeignKey>Lease_Charge__c.Lease__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>