force-app/main/default/objects/Lease__c/fields/Parking_Lot__c.field-meta.xml
<CustomField>
    <fullName>Parking_Lot__c</fullName>
    <description>The parking lot access of the tenant.</description>
    <inlineHelpText>Which parking lot is the tenant allowed to park in?</inlineHelpText>
    <label>Parking Lot</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Red Lot</fullName>
            </value>
            <value>
                <fullName>Yellow Lot</fullName>
            </value>
            <value>
                <fullName>Green Lot</fullName>
            </value>
            <value>
                <fullName>Blue Lot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>