force-app/main/default/objects/Lease__c/fields/Parking_mo__c.field-meta.xml
<CustomField>
    <fullName>Parking_mo__c</fullName>
    <description>The monthly rate for parking</description>
    <inlineHelpText>What is the total monthly rate for parking?</inlineHelpText>
    <label>Parking (mo)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>