force-app/main/default/objects/Lease__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created by JW
Tracks the main point of correspondence for this lease (contact).
Carries over from Opp from Global Action</description>
    <inlineHelpText>Who is the primary point of contact for this lease?</inlineHelpText>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leases</relationshipLabel>
    <relationshipName>Leases</relationshipName>
    <type>Lookup</type>
</CustomField>