force-app/main/default/objects/Lease__c/fields/Property_Address__c.field-meta.xml
<CustomField>
    <fullName>Property_Address__c</fullName>
    <formula>HYPERLINK(&quot;http://maps.google.com/maps?f=q&amp;hl=en&amp;q=&quot;&amp;Property_Street__c&amp;&quot;+&quot;&amp;Property_City__c&amp;&quot;,+&quot;&amp;Property_State_Province__c&amp;&quot;+&quot;&amp;Property_Zip_Postal_Code__c&amp;&quot;+&quot;&amp;Property_Country__c&amp;&quot; &amp;om=1&quot;, Property_Street__c &amp; BR() &amp; 
Property_City__c &amp; &quot; &quot; &amp; Property_State_Province__c &amp; BR() &amp;
Property_Zip_Postal_Code__c &amp; &quot; &quot; &amp; Property_Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Address</label>
    <type>Text</type>
</CustomField>