force-app/main/default/objects/Lease__c/fields/Property_Country__c.field-meta.xml
<CustomField>
    <fullName>Property_Country__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Property Country</label>
    <length>70</length>
    <type>Text</type>
</CustomField>