force-app/main/default/objects/Lease__c/fields/Property_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Property_State_Province__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Property State/Province</label>
    <length>70</length>
    <type>Text</type>
</CustomField>