force-app/main/default/objects/Lease__c/fields/Property_Street__c.field-meta.xml
<CustomField>
    <fullName>Property_Street__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Property Street</label>
    <length>70</length>
    <type>Text</type>
</CustomField>