force-app/main/default/objects/Lease__c/fields/Rent_mo__c.field-meta.xml
<CustomField>
    <fullName>Rent_mo__c</fullName>
    <description>The monthly rent as per the lease agreement</description>
    <inlineHelpText>What is the monthly rent per the lease agreement?</inlineHelpText>
    <label>Rent (mo)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>