force-app/main/default/objects/Lease__c/fields/Signage_Installation__c.field-meta.xml
<CustomField>
    <fullName>Signage_Installation__c</fullName>
    <description>Created by JW
This amount is a one-time payment for fabrication and installation for signage.
Populated by Flow.</description>
    <inlineHelpText>A one-time payment for fabrication and installation of the signage for this lease.</inlineHelpText>
    <label>Signage Installation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>