force-app/main/default/objects/Lease__c/fields/Signage_mo__c.field-meta.xml
<CustomField>
    <fullName>Signage_mo__c</fullName>
    <description>Created by JW
Tracks the total monthly payment for signage on this lease.
Populated by Flow.</description>
    <inlineHelpText>What is the monthly payment for signage on this lease?</inlineHelpText>
    <label>Signage(mo)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>