force-app/main/default/objects/Lease__c/fields/Tenant_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Mailing_Address__c</fullName>
    <formula>HYPERLINK(&quot;http://maps.google.com/maps?f=q&amp;hl=en&amp;q=&quot;&amp;Tenant_Mailing_Street__c&amp;&quot;+&quot;&amp;Tenant_Mailing_City__c&amp;&quot;,+&quot;&amp;Tenant_Mailing_State_Province__c&amp;&quot;+&quot;&amp;Tenant_Mailing_Zip_Postal_Code__c&amp;&quot;+&quot;&amp;Tenant_Mailing_Country__c&amp;&quot; &amp;om=1&quot;, Tenant_Mailing_Street__c &amp; BR() &amp; 
Tenant_Mailing_City__c &amp; &quot; &quot; &amp; Tenant_Mailing_State_Province__c &amp; BR() &amp;
Tenant_Mailing_Zip_Postal_Code__c &amp; &quot; &quot; &amp; Tenant_Mailing_Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tenant Mailing Address</label>
    <type>Text</type>
</CustomField>