force-app/main/default/objects/Lease__c/fields/Tenant_Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Mailing_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tenant Mailing City</label>
    <length>75</length>
    <type>Text</type>
</CustomField>