force-app/main/default/objects/Lease__c/fields/Tenant_Mailing_Country__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Mailing_Country__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tenant Mailing Country</label>
    <length>70</length>
    <type>Text</type>
</CustomField>