force-app/main/default/objects/Lease__c/fields/Tenant_Mailing_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Mailing_Zip_Postal_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tenant Mailing Zip/Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>