force-app/main/default/objects/Lease__c/fields/Test_Formula__c.field-meta.xml
<CustomField>
    <fullName>Test_Formula__c</fullName>
    <formula>DATETIMEVALUE(TEXT(Lease_Start_Date__c + 1) + &apos; 00:00:00&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Formula</label>
    <type>DateTime</type>
</CustomField>