force-app/main/default/objects/Lease__c/fields/Today__c.field-meta.xml
<CustomField>
    <fullName>Today__c</fullName>
    <description>Today Formula for BW-Auto Lease Charge Creation process, not shown on layout</description>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Today</label>
    <type>Date</type>
</CustomField>