force-app/main/default/objects/Lease__c/fields/Today_do_not_display__c.field-meta.xml
<CustomField>
    <fullName>Today_do_not_display__c</fullName>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Today (do not display)</label>
    <type>Date</type>
</CustomField>