force-app/main/default/objects/Lease__c/fields/Todays_Year__c.field-meta.xml
<CustomField>
    <fullName>Todays_Year__c</fullName>
    <description>Todays Year for BW - Auto Lease Charge Creation process</description>
    <formula>TEXT(YEAR(Today__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Todays Year</label>
    <type>Text</type>
</CustomField>