force-app/main/default/objects/Lease__c/fields/Total_Lease__c.field-meta.xml
<CustomField>
    <fullName>Total_Lease__c</fullName>
    <description>The total lease amount</description>
    <formula>( Rent_mo__c + Parking_mo__c ) * Lease_Length__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows the total lease amount</inlineHelpText>
    <label>Total Lease</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>