force-app/main/default/objects/Lease__c/fields/Total_Monthly_Payment__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_Payment__c</fullName>
    <description>The total monthly payment, includes rent, parking, and signage.</description>
    <formula>Rent_mo__c + Parking_mo__c +  Signage_mo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows the total monthly payment, including both rent, parking, and signage.</inlineHelpText>
    <label>Total Monthly Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>