force-app/main/default/objects/Lease__c/fields/Total_Remaining_Balance__c.field-meta.xml
<CustomField>
    <fullName>Total_Remaining_Balance__c</fullName>
    <description>The outstanding balance of the lease</description>
    <formula>Total_Lease__c - Amount_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows the outstanding balance on the lease</inlineHelpText>
    <label>Total Remaining Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>