force-app/main/default/objects/Lease__c/recordTypes/Commercial.recordType-meta.xml
<RecordType>
    <fullName>Commercial</fullName>
    <active>true</active>
    <description>Commercial Lease</description>
    <label>Commercial</label>
</RecordType>