force-app/main/default/objects/Lease__c/recordTypes/Desk_Hotel.recordType-meta.xml
<RecordType>
    <fullName>Desk_Hotel</fullName>
    <active>true</active>
    <description>Desk Hotel Lease</description>
    <label>Desk Hotel</label>
</RecordType>