force-app/main/default/objects/Lease__c/validationRules/Parking_Only_Cannot_Have_Rent_or_Signage.validationRule-meta.xml
<ValidationRule>
    <fullName>Parking_Only_Cannot_Have_Rent_or_Signage</fullName>
    <active>true</active>
    <description>Created by JW
Does not allow Lease records that are &quot;Parking Only&quot; to have rent, deposit, or signage info.</description>
    <errorConditionFormula>AND(
     ISPICKVAL( Lease_Type__c, &quot;Parking Only&quot; ),
     OR(
           NOT(ISBLANK(Rent_mo__c)),
           NOT(ISBLANK(of_Signs__c)),
           NOT(ISBLANK(Signage_Installation__c)),
           NOT(ISBLANK(Signage_mo__c))
        )
)</errorConditionFormula>
    <errorMessage>&quot;Parking only&quot; leases cannot contain rent or signage information.</errorMessage>
</ValidationRule>