force-app/main/default/objects/Lease__c/listViews/All_Active_Leases.listView-meta.xml
<ListView>
    <fullName>All_Active_Leases</fullName>
    <columns>NAME</columns>
    <columns>Tenant__c</columns>
    <columns>Lease_Start_Date__c</columns>
    <columns>Lease_Expiration_Date__c</columns>
    <columns>Total_Monthly_Payment__c</columns>
    <columns>Total_Lease__c</columns>
    <columns>Outstanding_Charges__c</columns>
    <columns>Insurance__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>All Active Leases</label>
    <sharedTo>
        <group>Leasing_Team</group>
        <group>SF_Admin_Team</group>
        <group>Tech_Support_Team</group>
    </sharedTo>
</ListView>