force-app/main/default/objects/Lease__c/listViews/Leases_and_Accounts.listView-meta.xml
<ListView>
    <fullName>Leases_and_Accounts</fullName>
    <columns>NAME</columns>
    <columns>Tenant__c</columns>
    <columns>Lease_Start_Date__c</columns>
    <columns>Lease_Expiration_Date__c</columns>
    <columns>Total_Monthly_Payment__c</columns>
    <columns>Total_Lease__c</columns>
    <columns>Outstanding_Charges__c</columns>
    <columns>Insurance__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Leases</label>
    <sharedTo>
        <group>Leasing_Team</group>
        <group>SF_Admin_Team</group>
        <group>Tech_Support_Team</group>
    </sharedTo>
</ListView>